Ticket #7397: Mark related media as "pending" when parent status is changed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -431,14 +431,21 @@ en:
     (displayed to users)
   tag_text_id_not_found: Sorry, there is no tag with the provided identifier
   annotation_type_language_label: Language
-  smooch_bot_message_confirmed: Thank you, we've received your request and you should hear from us again shortly.
+  smooch_bot_message_confirmed: Thank you, we've received your request and you should
+    hear from us again shortly.
   smooch_bot_message_unconfirmed: Thank you, we will not process your message any
     further.
-  smooch_bot_message_type_unsupported: Sorry, we don't support this type of file format for verification yet.
+  smooch_bot_message_type_unsupported: Sorry, we don't support this type of file format
+    for verification yet.
   smooch_bot_message_sent: You have already sent us this message.
-  smooch_bot_meme: Here's a meme we created based on the item you have requested that we fact-check. 
-  smooch_bot_result: We have fact-checked what you sent us, and have determined that the item is *%{status}*. Learn more at %{url}.
-  smooch_bot_ask_for_confirmation: Thanks for getting in touch! Please confirm that you want to fact-check this item. Send 1 for 'yes', 2 for 'no'.
+  smooch_bot_meme: Here's a meme we created based on the item you have requested that
+    we fact-check.
+  smooch_bot_result: We have fact-checked what you sent us, and have determined that
+    the item is *%{status}*. Learn more at %{url}.
+  smooch_bot_ask_for_confirmation: Thanks for getting in touch! Please confirm that
+    you want to fact-check this item. Send 1 for 'yes', 2 for 'no'.
+  smooch_bot_window_closing: If you still want to receive messages from us, please
+    get in touch! Otherwise, do nothing.
   project_export_download_mail_csv: |-
     Hello!
 
@@ -560,4 +567,5 @@ en:
   verification_status_deadline: Deadline
   verification_status_deadline_asc: Due soonest
   verification_status_deadline_desc: Due latest
-  cant_mutate_inactive_object: "Sorry, there is an operation pending for this item, so you can't change it right now. Please try again later."
+  cant_mutate_inactive_object: Sorry, there is an operation pending for this item,
+    so you can't change it right now. Please try again later.
