--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -41,7 +41,17 @@ pt:
         description: A tradução foi revisada e aprovada para publicação
       error:
         label: Erro
-        description: A tradução foi revisada e erros foram encontrados
+      'false':
+        description: 'Conclusão: o conteúdo do item é falso'
+      inconclusive:
+        label: Inconclusivo
+      misleading:
+        label: Enganoso
+      disputed:
+        label: Contestado
+      unstarted:
+        label: Não iniciado
+        description: Padrão, recém adicionado ao Check, o trabalho não foi iniciado
     source:
       undetermined:
         label: Não iniciado
@@ -361,9 +371,9 @@ pt:
   smooch_bot_message_unconfirmed: Obrigado, não vamos mais processar esta mensagem.
   smooch_bot_message_type_unsupported: Desculpe, ainda não damos suporte a este formato de arquivo para verificação.
   smooch_bot_message_sent: Você já nos enviou esta mensagem.
-  smooch_bot_meme: Aqui está um meme criado com base no item que você solicitou que checássemos.
-  smooch_bot_result: Nós checamos o que você enviou, e determinamos que o item é *%{status}*. Saiba mais em %{url}.
-  smooch_bot_ask_for_confirmation: Obrigado por entrar em contato! Por favor confirme que você deseja checar esta informação. Envie '1' para 'sim', '2' para 'não'.
+  smooch_bot_meme: Aqui está um meme criado com base no item que você solicitou que verificássemos. Saiba mais em %{url}.
+  smooch_bot_result: Nós verificamos o que você enviou, e determinamos que o item é *%{status}*. Saiba mais em %{url}.
+  smooch_bot_ask_for_confirmation: Obrigado por entrar em contato! Por favor confirme que você deseja verificar esta informação. Envie '1' para 'sim', '2' para 'não'.
   smooch_bot_window_closing: Se você ainda deseja receber nossas mensagens, por favor entre em contato! Caso contrário, nada a fazer.
   project_export_download_mail_csv: |-
       Olá!
@@ -399,7 +409,7 @@ pt:
       journalist:
         description: Jornalistas verificam informações.
       contributor:
-        description: Colaboradores podem adicionar novas informações a serem checadas. Geralmente são membros do público.
+        description: Colaboradores podem adicionar novas informações a serem verificadas. Geralmente são membros do público.
       annotator:
         description: Anotadore(a)s só podem ver e responder tarefas que são atribuídas a ele(a)s.
     permissions:
@@ -483,3 +493,7 @@ pt:
   verification_status_deadline_asc: Prazo mais curto
   verification_status_deadline_desc: Prazo mais longo
   cant_mutate_inactive_object: Desculpe, há uma operação pendente para este item, então você não pode alterá-lo agora. Por favor, tente novamente mais tarde.
+  embed_expand_all: Expandir tudo
+  embed_collapse_all: Recolher tudo
+  embed_tasks: Tarefas
+  embed_description: Descrição
