Add more custom statuses and update l10n

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -49,6 +49,10 @@ ar:
         label: مُضَلِّل
       disputed:
         label: متنازع عليه
+      out_of_scope:
+        label: خارج النطاق
+      junk:
+        label: سخام
       unstarted:
         label: لم يبدأ بعد
         description: الحالة الافتراضية لعنصر أُضيف تواً، لم تبدأ معالجته
